# jtimer

./: .gitignore  Makefile  README.md  bandit.yml  pyproject.toml
.github/workflows/: main.yml
jtimer/: main.py
jtimer/controller/: timer_controller.py
jtimer/view/: __init__.py  jtimer_window.py  push_button.py  timer_label.py  timer_name_box.py  timer_widget.py  timers_view.py
mptimer/: main.py
mptimer/controller/: __init__.py  calc_utils.py  timer_controller.py
mptimer/dao/: __init__.py
mptimer/model/: timer.py
mptimer/view/: timer_widget.py  timers_view.py
tests/: test_mptimer.py  test_version.py
tests/controller/: test_calc_utils.py  test_calc_utils_sum_events.py  test_timer_controller.py
