[tool.poetry]
name = "mptimer"
version = "0.1.0"
description = "Multi Purpose Timer Tool for simple productivity tracking"
authors = ["John Watson <jmwdev@pm.me>"]
maintainers = ["John Watson <jmwdev@pm.me>"]
license = "GNU GENERAL PUBLIC LICENSE V3"
readme = "README.md"
keywords = ["productivity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

packages = [
    {include = "mptimer"},
    {include = "schema.sql"}
]

[tool.poetry.dependencies]
python = "^3.10.6"
PyQt6 = "^6.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
